Pull up following revision(s) (requested by msaitoh in ticket #1955): 	lib/libc/stdio/gettemp.c: revision 1.16 via patch PR/47757: Eric Radman: mktemp(3) mangles the pathname if not given an absolute     path 1. on error, gettemp() did not restore the path string 2. when emulating mktemp() it is not an error for the pattern not to represent    a real directory structure XXX[1]: pullup-5, pullup-6 XXX[2]: the default pattern is the simplistic <pid><X> for mktemp.