lib/libc/stdio/gettemp.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: gettemp.c,v 1.14 2008/10/20 10:28:38 apb Exp $	*/
+/*	$NetBSD: gettemp.c,v 1.14.2.1 2015/04/16 06:33:59 snj Exp $	*/
 
 /*
  * Copyright (c) 1987, 1993
@@ -40,7 +40,7 @@
 #if 0
 static char sccsid[] = "@(#)mktemp.c	8.1 (Berkeley) 6/4/93";
 #else
-__RCSID("$NetBSD: gettemp.c,v 1.14 2008/10/20 10:28:38 apb Exp $");
+__RCSID("$NetBSD: gettemp.c,v 1.14.2.1 2015/04/16 06:33:59 snj Exp $");
 #endif
 #endif /* LIBC_SCCS and not lint */
 
@@ -122,14 +122,16 @@ GETTEMP(path, doopen, domkdir)
 		if (trv <= path)
 			break;
 		if (*trv == '/') {
+			int e;
 			*trv = '\0';
-			if (stat(path, &sbuf))
-				return (0);
+			e = stat(path, &sbuf);
+			*trv = '/';
+			if (e == -1)
+				return doopen == NULL && !domkdir;
 			if (!S_ISDIR(sbuf.st_mode)) {
 				errno = ENOTDIR;
-				return (0);
+				return doopen == NULL && !domkdir;
 			}
-			*trv = '/';
 			break;
 		}
 	}
